﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Major]
 - Added tests
 - Prereqs retrieved directly from Dist::Zilla now *WITHOUT* using EmulatePhase.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - runtime: -3
 - test: +3 -1 (recommends: ↑1 -2)

1.000001 2014-07-19T02:16:32Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: +3 -3 (suggests: +2 -1)
 - test: +2 ↑1 (recommends: +1)

1.000000 2014-05-20T05:33:17Z
 [00 Major]
 - Moderately sized packaging changes, a few small code changes.

 [01 Tooling]
 - Now uses ExtUtils::MakeMaker for installer.
 - "Latest" dependency logic now only added to /recommends/

 [02 Versioning]
 - Version scheme is now x.yyyyyy ( mantissa = 6 )
 - This is the primary reason for the 1.x on the box.

 [Bugfix]
 - BuiltWith::All ocasionally messed up when it found certain modules in %INC which had names such that it was
   impossible to load them ( Anon classes, Mx Types ), and these needlessly caused failures. Fixed.

 [Dependencies::Aggregate]
 - 5.008009 : 202 → 206
 - 5.010001 : 180 → 185
 - 5.018002 : ? → 172
 - 5.019000 : 166 → ?
 - 5.019009 : ? → 166

 [Dependencies::Stats]
 - Dependencies changed since 0.04000002, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - runtime: +1 ↑1
 - test: +4 ↓1 (recommends: +4)

0.04000002 2013-11-25T08:35:49Z
 [00 Bugfix]
 - Don't try to test if it was a file or not if its undefined.

 [Dependencies::Stats]
 - Dependencies changed since 0.04000001, see misc/*.deps* for details
 - develop: ↑1
 - runtime: +1

0.04000001 2013-11-22T04:23:48Z
 [00 Maint]
 - Changes retroactively cleaned. Next time, you will be forced to wear a clown shoes and ride a unicycle.

 [Dependencies::Stats]
 - Dependencies changed since 0.04000000, see misc/*.deps* for details