@@ -1,8 +1,13 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000002
- [Added / test requires]
+ [Added / runtime requires]
+ - CPAN::Meta::Converter
+ - Dist::Zilla::Role::FileMunger
  - JSON
+ - YAML::Tiny
+
+ [Added / test requires]
  - Path::Tiny
  - Test::DZil
 
@@ -11,6 +16,7 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Removed / runtime requires]
  - Class::Load
+ - Dist::Zilla::Role::MetaProvider
  - Dist::Zilla::Util::EmulatePhase 0.01000101
  - Readonly
 
