@@ -1,8 +1,13 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 1.000002
- [Added / test requires]
+ [Added / runtime requires]
+ - CPAN::Meta::Converter
+ - Dist::Zilla::Role::FileMunger
  - JSON
+ - YAML::Tiny
+
+ [Added / test requires]
  - Path::Tiny
  - Test::DZil
 
@@ -17,6 +22,7 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / runtime requires]
  - Class::Load
+ - Dist::Zilla::Role::MetaProvider
  - Dist::Zilla::Util::EmulatePhase 0.01000101
  - Readonly
 
